--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 1 Template</title>
+    <title>Wavebusters LF Simulation</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -28,7 +28,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4">						
-						<h1><a class="navbar-brand" href="index.html" data-0="line-height:90px;" data-300="line-height:50px;">			WaveBusters
+						<h1><a class="navbar-brand" href="index.html" data-0="line-height:90px;" data-300="line-height:50px;">			LF Simulation
 						</a></h1>   						
 					</div>						
 					<div class="col-md-8">
@@ -46,7 +46,7 @@
 		</div>
 	</header>
 
-	<div id="main-content">
+	<div id="main-content" class="bg">
 		<div class="container">
 			<div class="row">
 				<div class="big-box">
@@ -74,7 +74,7 @@
 					</div>
 				</div>
 				<div class="row align-center copyright">
-					<div class="col-sm-12"><p>Copyright &copy; 2014 Hidayah - by <a href="http://bootstraptaste.com">Bootstraptaste</a></p></div>
+					<div class="col-sm-12"><p>Template by <a href="http://bootstraptaste.com">Bootstraptaste</a></p></div>
                     <!-- 
                         All links in the footer should remain intact. 
                         Licenseing information is available at: http://bootstraptaste.com/license/
