add faq (no content yet)

--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
 							<ul class="nav nav-pills">
 								<li><a ui-sref="home()">Home</a></li>
 								<li><a ui-sref="theory()">Theory</a></li>
+								<li><a ui-sref="faq()">FAQ</a></li>
 								<li><a ui-sref="requestInit()">Request</a></li>
 							</ul>
 						</div>
