request by key, contact form

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
 				<div class="row animated opacity mar-bot20" data-andown="fadeIn" data-animation="animation">
 					<div class="col-sm-12 align-center">
 						<ul class="social-network social-circle">
+							<li><a ui-sref="contact()" class="icoRss" title="E-Mail"><i class="glyphicon glyphicon-envelope"></i></a></li>
 							<li><a href="#" class="icoRss" title="Rss"><i class="fa fa-rss"></i></a></li>
 							<li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
 							<li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
