--- a/app/index.html
+++ b/app/index.html
@@ -66,16 +66,16 @@
 					<div class="col-sm-12 align-center">
 						<ul class="social-network social-circle">
 							<li><a ui-sref="contact()" class="icoRss" title="E-Mail"><i class="glyphicon glyphicon-envelope"></i></a></li>
-							<li><a href="#" class="icoRss" title="Rss"><i class="fa fa-rss"></i></a></li>
+							<!-- <li><a href="#" class="icoRss" title="Rss"><i class="fa fa-rss"></i></a></li> -->
 							<li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li>
-							<li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+							<!-- <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li> -->
+							<!-- <li><a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li> -->
+							<!-- <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li> -->
 						</ul>				
 					</div>
 				</div>
 				<div class="row align-center copyright">
-					<div class="col-sm-12"><p>Template by <a href="http://bootstraptaste.com">Bootstraptaste</a></p></div>
+					<div class="col-sm-12"><small style="font-size: 65%;">Template by <a href="http://bootstraptaste.com">Bootstraptaste</a></small></div>
                     <!-- 
                         All links in the footer should remain intact. 
                         Licenseing information is available at: http://bootstraptaste.com/license/
