--- a/app/index.html
+++ b/app/index.html
@@ -88,12 +88,9 @@
 
 
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-   Include all compiled plugins (below), or include individual files as needed -->
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 	<script src="js/fancybox/jquery.fancybox.pack.js"></script>
-	<script src="js/wow.min.js"></script>
 	<script src="js/functions.js"></script>
 
   <script src="bower_components/angular/angular.js"></script>
